# binfarce

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: elf32.rs  elf64.rs  macho.rs  pe.rs
src/: ar.rs  elf32.rs  elf64.rs  error.rs  lib.rs  macho.rs  parser.rs  pe.rs
src/demangle/: mod.rs
