[package]
name = "kuduk"
version = "0.9.3"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>", "Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
description = "Extremely minimal parser for ELF, Mach-O, PE and ar."
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
json = "0.12"
memmap2 = "0.1"
multimap = { version = "0.8", default-features = false }
pico-args = "0.3"
term_size = "0.3.1"

[dependencies.regex]
version = "1.3"
optional = true
default-features = false
features = ["std"]

[features]
regex-filter = ["regex"]
